--- a/app/package.json
+++ b/app/package.json
@@ -4,9 +4,9 @@
   "private": true,
 	"proxy": "https://127.0.0.1:3001",
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
