--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "react-app-rewired": "^2.2.1"
+    "@types/react-dom": "^18.0.11"
   }
 }
